@@ -322,13 +322,13 @@
         <varlistentry>
           <term><option>--exit</option></term>
           <listitem>
-            <para>Signal and wait for udevd to exit.</para>
+            <para>Signal and wait for systemd-udevd to exit.</para>
           </listitem>
         </varlistentry>
         <varlistentry>
           <term><option>--log-priority=<replaceable>value</replaceable></option></term>
           <listitem>
-            <para>Set the internal log level of udevd. Valid values are the numerical
+            <para>Set the internal log level of systemd-udevd. Valid values are the numerical
             syslog priorities or their textual representations: <option>err</option>,
             <option>info</option> and <option>debug</option>.</para>
           </listitem>
@@ -336,20 +336,20 @@
         <varlistentry>
           <term><option>--stop-exec-queue</option></term>
           <listitem>
-            <para>Signal udevd to stop executing new events. Incoming events
+            <para>Signal systemd-udevd to stop executing new events. Incoming events
             will be queued.</para>
           </listitem>
         </varlistentry>
         <varlistentry>
           <term><option>--start-exec-queue</option></term>
           <listitem>
-            <para>Signal udevd to enable the execution of events.</para>
+            <para>Signal systemd-udevd to enable the execution of events.</para>
           </listitem>
         </varlistentry>
         <varlistentry>
           <term><option>--reload</option></term>
           <listitem>
-            <para>Signal udevd to reload the rules files and other databases like the kernel
+            <para>Signal systemd-udevd to reload the rules files and other databases like the kernel
             module index. Reloading rules and databases does not apply any changes to already
             existing devices; the new configuration will only be applied to new events.</para>
           </listitem>
@@ -363,14 +363,14 @@
         <varlistentry>
           <term><option>--children-max=</option><replaceable>value</replaceable></term>
           <listitem>
-            <para>Set the maximum number of events, udevd will handle at the
+            <para>Set the maximum number of events, systemd-udevd will handle at the
             same time.</para>
           </listitem>
         </varlistentry>
         <varlistentry>
           <term><option>--timeout=</option><replaceable>seconds</replaceable></term>
           <listitem>
-            <para>The maximum number seconds to wait for a reply from udevd.</para>
+            <para>The maximum number seconds to wait for a reply from systemd-udevd.</para>
           </listitem>
         </varlistentry>
         <varlistentry>
@@ -470,7 +470,7 @@
         <refentrytitle>udev</refentrytitle><manvolnum>7</manvolnum>
     </citerefentry>
     <citerefentry>
-        <refentrytitle>udevd</refentrytitle><manvolnum>8</manvolnum>
+        <refentrytitle>systemd-udevd</refentrytitle><manvolnum>8</manvolnum>
     </citerefentry></para>
   </refsect1>
 </refentry>
